[package]
name = "txt-sectumsempra"
version = "0.1.0"
edition = "2021"
description = "A minimalistic file chunking utility"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Core functionality
sha2 = "0.10.8"     # For checksum calculation
clap = { version = "4.5.21", features = ["derive"] }  # For CLI argument parsing

[dev-dependencies]
tempfile = "3.14.0"  # For test file management
ctor = "0.2.7"     # For test cleanup